--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "undp-dfp-viz-template",
+  "name": "green-gender-tracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +7,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/d3-request": "^1.0.6",
     "@types/jest": "^26.0.24",
+    "@types/lodash.uniqby": "^4.7.7",
     "@types/node": "^12.20.28",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.14",
     "antd": "^4.18.7",
+    "d3-request": "^1.0.6",
+    "lodash.uniqby": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
