--- a/package.json
+++ b/package.json
@@ -7,15 +7,29 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/d3-geo": "^3.0.2",
     "@types/d3-request": "^1.0.6",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-selection": "^3.0.3",
+    "@types/d3-zoom": "^3.0.1",
     "@types/jest": "^26.0.24",
+    "@types/lodash.maxby": "^4.6.7",
+    "@types/lodash.sortby": "^4.7.7",
+    "@types/lodash.sumby": "^4.6.7",
     "@types/lodash.uniqby": "^4.7.7",
     "@types/node": "^12.20.28",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.14",
     "antd": "^4.18.7",
+    "d3-geo": "^3.0.1",
     "d3-request": "^1.0.6",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-zoom": "^3.0.0",
+    "lodash.maxby": "^4.6.0",
+    "lodash.sortby": "^4.7.0",
+    "lodash.sumby": "^4.6.0",
     "lodash.uniqby": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
