--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/d3-geo": "^3.0.2",
+    "@types/d3-queue": "^3.0.8",
     "@types/d3-request": "^1.0.6",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-selection": "^3.0.3",
@@ -23,6 +24,7 @@
     "@types/styled-components": "^5.1.14",
     "antd": "^4.18.7",
     "d3-geo": "^3.0.1",
+    "d3-queue": "^3.0.7",
     "d3-request": "^1.0.6",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
