--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/d3-zoom": "^3.0.1",
     "@types/jest": "^26.0.24",
     "@types/lodash.maxby": "^4.6.7",
+    "@types/lodash.meanby": "^4.10.6",
     "@types/lodash.sortby": "^4.7.7",
     "@types/lodash.sumby": "^4.6.7",
     "@types/lodash.uniqby": "^4.7.7",
@@ -22,7 +23,7 @@
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.14",
-    "antd": "^4.18.7",
+    "antd": "^4.23.6",
     "d3-geo": "^3.0.1",
     "d3-queue": "^3.0.7",
     "d3-request": "^1.0.6",
@@ -30,6 +31,7 @@
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
     "lodash.maxby": "^4.6.0",
+    "lodash.meanby": "^4.10.0",
     "lodash.sortby": "^4.7.0",
     "lodash.sumby": "^4.6.0",
     "lodash.uniqby": "^4.7.0",
