--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/d3-format": "^3.0.1",
     "@types/d3-geo": "^3.0.2",
     "@types/d3-queue": "^3.0.8",
     "@types/d3-request": "^1.0.6",
@@ -24,6 +25,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.14",
     "antd": "^4.23.6",
+    "d3-format": "^3.1.0",
     "d3-geo": "^3.0.1",
     "d3-queue": "^3.0.7",
     "d3-request": "^1.0.6",
