Upgrade react and add global style sheet

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/d3-scale": "^4.0.2",
     "@types/d3-selection": "^3.0.3",
     "@types/d3-zoom": "^3.0.1",
+    "@types/dom-to-image": "^2.6.4",
     "@types/jest": "^26.0.24",
     "@types/lodash.maxby": "^4.6.7",
     "@types/lodash.meanby": "^4.10.6",
@@ -21,10 +22,10 @@
     "@types/lodash.sumby": "^4.6.7",
     "@types/lodash.uniqby": "^4.7.7",
     "@types/node": "^12.20.28",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.14",
-    "antd": "^4.23.6",
+    "antd": "^5.1.6",
     "d3-format": "^3.1.0",
     "d3-geo": "^3.0.1",
     "d3-queue": "^3.0.7",
@@ -32,13 +33,14 @@
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
+    "dom-to-image": "^2.6.0",
     "lodash.maxby": "^4.6.0",
     "lodash.meanby": "^4.10.0",
     "lodash.sortby": "^4.7.0",
     "lodash.sumby": "^4.6.0",
     "lodash.uniqby": "^4.7.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
